--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "new-folder-(3)",
+  "name": "to-do-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
